record,sealed things,switch